--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cspace-ui",
-  "version": "3.1.0",
+  "name": "@ucb-cspace/cspace-ui",
+  "version": "3.1.0-ucb.1",
   "description": "CollectionSpace user interface for browsers",
   "author": "Ray Lee <ray.lee@lyrasis.org>",
   "license": "ECL-2.0",
